@@ -36,6 +36,13 @@
 #endif	/* APPLE_KEYMGR */
 /* APPLE LOCAL end keymgr */
 
+/* APPLE LOCAL begin 4832917 */
+#ifdef __i386__
+#define _keymgr_get_per_thread_data(K) (NULL)
+#define _keymgr_set_per_thread_data(K, D) (0)
+#endif
+/* APPLE LOCAL end 4832917 */
+
 using std::new_handler;
 using std::bad_alloc;
 
